--- a/HT_Player_Cell.xib
+++ b/HT_Player_Cell.xib
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,7 +13,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="479"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="P5d-ra-OGc" id="kPz-ES-voU">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="478"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="479"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="11" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gRW-Oi-07i">
@@ -26,7 +28,7 @@
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="dfJ-or-egp"/>
                         </constraints>
-                        <color key="minimumTrackTintColor" red="0.0" green="0.50980392159999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="minimumTrackTintColor" red="0.0" green="0.50980392159999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </slider>
                     <label opaque="NO" userInteractionEnabled="NO" tag="13" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sju-2A-oUX">
                         <rect key="frame" x="29" y="246" width="42" height="15"/>
@@ -35,7 +37,7 @@
                             <constraint firstAttribute="height" constant="15" id="Kis-vP-BDM"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="0.66666668653488159" green="0.66666668653488159" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" tag="14" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LNT-0N-h3s">
@@ -45,7 +47,7 @@
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="OX2-r0-hJT"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="0.66666668653488159" green="0.66666668653488159" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" tag="15" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="---" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fYs-mE-cNE">
@@ -55,11 +57,11 @@
                             <constraint firstAttribute="height" constant="33" id="PtH-9f-qaa"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
-                        <color key="textColor" red="0.0" green="0.50980392159999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.0" green="0.50980392159999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mph-2t-Ocd">
-                        <rect key="frame" x="51" y="314" width="50" height="50"/>
+                        <rect key="frame" x="50.5" y="314" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="Cpc-Fd-cKe"/>
                             <constraint firstAttribute="width" constant="50" id="eQs-HW-tif"/>
@@ -67,7 +69,7 @@
                         <state key="normal" image="back_D"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5qF-uB-WaU">
-                        <rect key="frame" x="128" y="306" width="65" height="65"/>
+                        <rect key="frame" x="127.5" y="306" width="65" height="65"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="65" id="Wnk-ta-M9n"/>
                             <constraint firstAttribute="width" constant="65" id="bFl-bI-Wji"/>
@@ -75,7 +77,7 @@
                         <state key="normal" image="play_D"/>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PdK-qM-Lfy">
-                        <rect key="frame" x="220" y="314" width="50" height="50"/>
+                        <rect key="frame" x="219.5" y="314" width="50" height="50"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="50" id="22H-7h-A3g"/>
                             <constraint firstAttribute="width" constant="50" id="rGl-Wh-NWn"/>
@@ -91,7 +93,7 @@
                         <state key="normal" image="off"/>
                     </button>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loading" translatesAutoresizingMaskIntoConstraints="NO" id="Ed0-7n-ulM">
-                        <rect key="frame" x="124" y="302" width="73" height="73"/>
+                        <rect key="frame" x="123.5" y="302" width="73" height="73"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="73" id="Bbd-Ee-xQM"/>
                             <constraint firstAttribute="width" constant="73" id="Ckg-Uh-ukq"/>
@@ -139,14 +141,14 @@
                     </button>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q5W-zy-11p">
                         <rect key="frame" x="17" y="436" width="286" height="1"/>
-                        <color key="backgroundColor" red="0.0" green="0.50980392159999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.50980392159999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="YWG-Wu-gqw"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pFv-M3-hdJ">
                         <rect key="frame" x="0.0" y="442" width="320" height="36"/>
-                        <color key="backgroundColor" red="0.0" green="0.50980392159999999" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.50980392159999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="36" id="3NP-T6-4VA"/>
                         </constraints>
@@ -159,7 +161,7 @@
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="28"/>
                         <state key="normal" title="List">
-                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </state>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3Qb-BN-AsT">
@@ -170,24 +172,24 @@
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="28"/>
                         <state key="normal" title="Edit">
-                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </state>
                     </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IzA-Bb-lZV">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IzA-Bb-lZV">
                         <rect key="frame" x="139" y="450" width="42" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="6b3-h4-5Sf"/>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="NJS-mr-9U0"/>
                         </constraints>
                         <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="18"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                 <integer key="value" value="0"/>
                             </userDefinedRuntimeAttribute>
                             <userDefinedRuntimeAttribute type="color" keyPath="layer.borderUIColor">
-                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </label>
@@ -243,15 +245,15 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="back_D" width="99" height="99"/>
-        <image name="clock" width="42" height="42"/>
-        <image name="infinity" width="42" height="42"/>
-        <image name="loading" width="93" height="93"/>
-        <image name="next_D" width="99" height="99"/>
-        <image name="off" width="21" height="21"/>
-        <image name="play_D" width="99" height="99"/>
-        <image name="reload" width="42" height="42"/>
-        <image name="shuffle" width="42" height="42"/>
-        <image name="sound_ac" width="42" height="42"/>
+        <image name="back_D" width="99.5" height="99.5"/>
+        <image name="clock" width="42.5" height="42.5"/>
+        <image name="infinity" width="42.5" height="42.5"/>
+        <image name="loading" width="93.5" height="93.5"/>
+        <image name="next_D" width="99.5" height="99.5"/>
+        <image name="off" width="21.5" height="21.5"/>
+        <image name="play_D" width="99.5" height="99.5"/>
+        <image name="reload" width="42.5" height="42.5"/>
+        <image name="shuffle" width="42.5" height="42.5"/>
+        <image name="sound_ac" width="42.5" height="42.5"/>
     </resources>
 </document>
